--- a/app/src/main/res/layout/activity_identification.xml
+++ b/app/src/main/res/layout/activity_identification.xml
@@ -6,66 +6,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@mipmap/login"
-    tools:context="cn.a1949science.www.bookshare.activity.ForgetPassword">
+    tools:context="cn.a1949science.www.bookshare.activity.Identification"
+    android:background="@mipmap/login">
 
-    <include layout="@layout/bar_main_title" />
+    <include layout="@layout/bar_main_title"/>
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginTop="100dp"
         android:layout_width="300dp"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="2.0dip"
-            android:padding="10.0dip"
-            android:text="+86"
-            android:id="@+id/textView24" />
+        android:layout_height="55dp">
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
-            android:id="@+id/phoneNum"
-            android:hint="请输入注册手机号"
-            android:paddingLeft="16dp"
-            android:maxLength="11"
+            android:id="@+id/name"
+            android:hint="请输入姓名"
             android:selectAllOnFocus="true"
-            android:inputType="phone"
             android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:id="@+id/linearLayout14">
+        android:layout_height="55dp" >
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
-            android:maxLength="6"
-            android:id="@+id/code"
-            android:hint="请输入验证码"
-            android:paddingLeft="16dp"
+            android:id="@+id/gender"
+            android:hint="请选择性别"
             android:selectAllOnFocus="true"
             android:layout_weight="1"
-            android:inputType="number" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="获取验证码"
-            android:id="@+id/getCode"
-            android:textSize="15sp"
-            android:layout_gravity="right" />
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
     </LinearLayout>
 
     <LinearLayout
@@ -77,11 +53,13 @@
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
-            android:id="@+id/password"
-            android:hint="请设置新密码"
+            android:id="@+id/school"
+            android:hint="请选择学校"
             android:selectAllOnFocus="true"
             android:layout_weight="1"
-            android:inputType="textPassword" />
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:clickable="false" />
     </LinearLayout>
 
     <LinearLayout
@@ -93,18 +71,40 @@
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
-            android:id="@+id/password2"
-            android:hint="请再次设置新密码"
+            android:id="@+id/Class"
+            android:hint="请选择年级"
             android:selectAllOnFocus="true"
             android:layout_weight="1"
-            android:inputType="textPassword" />
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
     </LinearLayout>
-
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="确认"
-        android:id="@+id/editOk"
+        android:text="上传图片"
+        android:id="@+id/updateImage"
         android:textSize="20sp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="50dp">
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
+            android:id="@+id/afterThat"
+            android:text="之后再说"/>
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:id="@+id/certificationOk"
+            android:text="完成认证"/>
+    </LinearLayout>
 </LinearLayout>
