1、实名认证基本完成 2、分布注册基本完成

--- a/app/src/main/res/layout/activity_identification.xml
+++ b/app/src/main/res/layout/activity_identification.xml
@@ -83,7 +83,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="上传图片"
+        android:text="上传学生证照片"
         android:id="@+id/updateImage"
         android:textSize="20sp" />
     <LinearLayout
