--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,12 +16,13 @@
             android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ListView
+            <cn.a1949science.www.bookshare.widget.LoadMoreListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/booklist"
                 android:dividerHeight="10dp"
-                android:divider="#ebecf0" />
+                android:divider="#ebecf0"
+                android:id="@+id/booklist2">
+            </cn.a1949science.www.bookshare.widget.LoadMoreListView>
         </android.support.v4.widget.SwipeRefreshLayout>
         <Button
             android:layout_width="55dp"
