--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,14 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:background="#fff"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <cn.a1949science.www.bookshare.widget.CircleImageView
         android:id="@+id/favicon2"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="40dp"
         android:src="@drawable/favicon" />
 
     <TextView
