--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_search"
         android:orderInCategory="100"
-        android:title="settings"
-        app:showAsAction="never" />
+        android:title="search"
+        android:icon="@mipmap/ic_search_black_48dp"
+        app:showAsAction="always" />
 </menu>
