--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,6 +5,6 @@
         android:id="@+id/action_search"
         android:orderInCategory="100"
         android:title="search"
-        android:icon="@mipmap/ic_search_black_48dp"
+        android:icon="@mipmap/search"
         app:showAsAction="always" />
 </menu>
