--- a/app/src/main/res/layout/booklist_item.xml
+++ b/app/src/main/res/layout/booklist_item.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:gravity="center"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
     android:background="#ffffff">
 
     <ImageView
