--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
     <color name="transparent">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="beShare">#fcf5f5</color>
 </resources>
