--- a/app/src/main/res/layout/activity_book__info.xml
+++ b/app/src/main/res/layout/activity_book__info.xml
@@ -21,21 +21,53 @@
                 android:layout_height="360dp"
                 android:id="@+id/image"
                 android:layout_gravity="center_horizontal"
-                android:background="#ffffff" />
+                android:background="@color/white"
+                android:contentDescription="@string/bookImage" />
 
-            <TextView
-                android:ellipsize="end"
+            <LinearLayout
+                android:id="@+id/introduce_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/introduce"
-                android:textIsSelectable="false"
-                android:background="#ffffff"
-                android:textSize="15sp"
                 android:layout_marginTop="3dp"
+                android:orientation="vertical"
+                android:background="@color/white">
 
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/introduce"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:gravity="center_horizontal" />
+
+                <TextView
+                    android:ellipsize="end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/introduce"
+                    android:textIsSelectable="false"
+                    android:background="#ffffff"
+                    android:textSize="15sp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp" />
+
+                <ImageView
+                    android:id="@+id/expand_view"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="right"
+                    android:paddingBottom="5dip"
+                    android:paddingLeft="5dip"
+                    android:paddingRight="5dip"
+                    android:paddingTop="5dip"
+                    android:src="@mipmap/expand"
+                    android:visibility="gone"
+                    android:contentDescription="@string/expand_introduce" />
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -47,18 +79,14 @@
                 android:weightSum="1"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="书名:"
-                    android:id="@+id/bookname1"
+                    android:text="@string/bookName"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
-
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
@@ -66,7 +94,6 @@
                     android:textSize="14sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -78,26 +105,24 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="作者:"
-                    android:id="@+id/writername"
+                    android:text="@string/bookWriter"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/writename"
+                    android:id="@+id/writername"
                     android:textSize="14sp"
+                    android:textColor="@color/blue"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -107,16 +132,13 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="出版社:"
-                    android:id="@+id/bookPress1"
+                    android:text="@string/bookPress"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -125,7 +147,6 @@
                     android:textSize="14sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -137,16 +158,13 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="出版日期:"
-                    android:id="@+id/publishedDate1"
+                    android:text="@string/publishedDate"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -155,7 +173,6 @@
                     android:textSize="14sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -167,16 +184,13 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="ISBN:"
-                    android:id="@+id/ISBN1"
+                    android:text="@string/isbn"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -185,7 +199,6 @@
                     android:textSize="14sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -197,16 +210,13 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp">
-
                 <TextView
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="时间:"
-                    android:id="@+id/time1"
+                    android:text="@string/time"
                     android:textSize="16sp"
                     android:gravity="center_horizontal" />
-
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -215,7 +225,6 @@
                     android:textSize="14sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -234,8 +243,7 @@
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="书主:"
-                    android:id="@+id/bookowner"
+                    android:text="@string/bookowner"
                     android:textSize="15sp"
                     android:gravity="center_horizontal" />
 
@@ -257,7 +265,8 @@
                 android:layout_marginTop="20dp"
                 android:background="#ebecf0"
                 android:gravity="center_vertical"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:baselineAligned="false">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -272,7 +281,8 @@
                         android:id="@+id/likeBtn"
                         android:background="#ffffff"
                         android:src="@mipmap/favourite"
-                        android:scaleType="fitXY" />
+                        android:scaleType="fitXY"
+                        android:contentDescription="@string/likeBtn" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -281,14 +291,14 @@
                     android:layout_height="50dp"
                     android:background="#ffffff"
                     android:gravity="center_vertical|center_horizontal" >
-
                     <ImageButton
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:id="@+id/readBtn"
                         android:background="#ffffff"
                         android:src="@mipmap/not_seen"
-                        android:scaleType="fitXY" />
+                        android:scaleType="fitXY"
+                        android:contentDescription="@string/readBtn" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -298,17 +308,18 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:layout_weight="1"
                     android:layout_marginLeft="1dp">
-
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="我想借书"
+                        android:text="@string/borrowBtn"
                         android:id="@+id/borrowBtn"
                         android:textSize="20sp"
                         android:background="#dc2727"
                         android:textColor="#ffffff" />
                 </LinearLayout>
+
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/can_refuse"
                 android:orientation="horizontal"
@@ -318,7 +329,8 @@
                 android:background="#ebecf0"
                 android:gravity="center_vertical"
                 android:weightSum="1"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:baselineAligned="false">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -333,7 +345,7 @@
                         android:id="@+id/likeBtn2"
                         android:background="#ffffff"
                         android:src="@mipmap/favourite"
-                        android:scaleType="fitXY" />
+                        android:scaleType="fitXY"/>
                 </LinearLayout>
 
                 <LinearLayout
