--- a/app/src/main/res/layout/activity_my_read.xml
+++ b/app/src/main/res/layout/activity_my_read.xml
@@ -44,8 +44,14 @@
             android:textSize="15sp" />
     </RelativeLayout>
 
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/myBookList" />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/booklist">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
