--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -343,6 +343,7 @@
                         android:id="@+id/borrowPhone"
                         android:gravity="center|center_horizontal"
                         android:textSize="14sp"
+                        android:textColor="@color/blue"
                         android:layout_weight="1" />
                 </LinearLayout>
                 <LinearLayout
