--- a/app/src/main/res/layout/booklist_item.xml
+++ b/app/src/main/res/layout/booklist_item.xml
@@ -13,20 +13,20 @@
         android:id="@+id/image"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:paddingLeft="10dp"/>
+        android:contentDescription="@string/bookImage" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:orientation="vertical"
-        android:layout_marginLeft="-50px"
         android:layout_weight="1">
         <TextView
             android:id="@+id/book"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:textColor="#000"
+            android:textColor="@color/black"
+            android:maxLines="1"
             android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal" />
         <TextView
@@ -36,17 +36,6 @@
             android:textSize="14sp"
             android:textColor="#555252"
             android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal" />
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已借"
-            android:textSize="10sp"
-            android:visibility="gone"
-            android:textColor="#555252"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="bottom|end" />
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 </LinearLayout>
