--- a/app/src/main/res/layout/sharing.xml
+++ b/app/src/main/res/layout/sharing.xml
@@ -138,6 +138,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:background="#ffffff"
+        android:gravity="center_vertical|center_horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:nestedScrollingEnabled="true"
+        tools:targetApi="lollipop">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/isbn"
+            android:textSize="14sp"
+            android:gravity="left|center_horizontal" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/ISBN"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:inputType="text" />
+
+    </LinearLayout>
+
 
 
 
