再次去掉了检测更新，优化了其他页面

--- a/app/src/main/res/layout/activity_identification2.xml
+++ b/app/src/main/res/layout/activity_identification2.xml
@@ -73,6 +73,7 @@
             android:text="图片示例："
             android:textColor="#000"/>
         <ImageView
+            android:id="@+id/idCard"
             android:layout_width="300dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
