--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="blue">#0d9ffb</color>
+    <color name="scan_corner_color">#000000</color>
 </resources>
