--- a/app/src/main/res/layout/activity_scan_isbn.xml
+++ b/app/src/main/res/layout/activity_scan_isbn.xml
@@ -11,11 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:navigationIcon="@mipmap/left"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:background="@color/white"
+        app:navigationIcon="@mipmap/left">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/light"
+            android:src="@mipmap/close_light"
+            android:layout_gravity="end"/>
     </android.support.v7.widget.Toolbar>
 </FrameLayout>
