1、归还图书的dug修改 2、图书列表不出现重复的书 3、重新整理了一遍借书过程

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="blue">#0d9ffb</color>
+    <color name="red">#dc2727</color>
     <color name="scan_corner_color">#000000</color>
 </resources>
