--- a/app/src/main/res/layout/booklist_item.xml
+++ b/app/src/main/res/layout/booklist_item.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:gravity="center"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
-    android:background="#ffffff">
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/image"
